# hueMCP

./: .env.example  CLAUDE.md  Makefile  README.md  com.hueMCP.plist  mcpctl  pyproject.toml
docs/: hueMCP_API_SPEC.md  hueMCP_SKILL.md
huemcp/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  logging_setup.py  server.py  tls.py  tools.py
tests/: conftest.py  test_cache.py  test_server.py  test_validation.py
